--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -1,28 +1,34 @@
 
-body {
-  margin: 0;
-  font-family: sans-serif;
-  background: #EEE;
+html, body {
+  height: 100%;
+  background-color: #f2f2f2;
 }
 
-header {
-  background: #2055a8;
-  padding: 12px;
-  box-shadow: 0px 0px 6px #999;
-  font-size: 24px;
-  color: #FFF;
-  text-align: center;
+#main{
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
-
-img {
-  width: 100%;
-  height: 200px;
-  background: #CCC;
-  object-fit: cover;
+#title{
+  color: white;
 }
 
-div {
+#nav-icon{
+  color: white;
+}
+
+/*list-view{
+  --mdc-layout-grid-gutter: 8px;
+}*/
+
+.card__16-9-media {
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 12.313rem;
+  /* 197sp, for 16:9 ratio with 350sp demo card width */
+}
+
+detail-view div {
   padding: 12px;
 }
 
@@ -34,108 +40,6 @@ a {
 p.error {
   margin-top: 30vh;
   text-align: center;
-}
-
-list-view a {
-  display: block;
-  margin: 20px 0;
-  box-shadow: 0px 0px 2px #999;
-  background: #FFF;
-  color: #000;
-}
-
-list-view a div {
-  font-size: 17px;
-}
-
-detail-view {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  height: 100vh;
-  overflow: auto;
-  background: #FFF;
-  transform: translate3d(0, 100%, 0);
-  opacity: 0;
-  transition-property: transform, opacity;
-  transition-duration: 0.4s;
-}
-
-body.detail-view-active {
-  overflow: hidden;
-}
-
-body.detail-view-active detail-view {
-  transform: translate3d(0, 0, 0);
-  opacity: 1;
-}
-
-detail-view .close-btn {
-  position: absolute;
-  top: 4px;
-  left: 4px;
-  width: 48px;
-  font-weight: bold;
-  line-height: 48px;
-  font-size: 32px;
-  color: #FFF;
-  text-align: center;
-  text-shadow: 0px 0px 5px #000;
-  cursor: pointer;
-}
-
-/*new css*/
-video {
-  max-width: 100%;
-  height: auto;
-}
-
-/* Side Nav*/
-.sidenav {
-    height: 100%;
-    width: 0;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    background: #EEE;
-    overflow-x: hidden;
-    transition: 0.5s;
-    padding-top: 60px;
-    visibility: hidden;
-}
-
-.sidenav a {
-    padding: 8px 8px 8px 32px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #2055a8;
-    display: block;
-    transition: 0.3s;
-}
-
-.sidenav a:hover, .offcanvas a:focus{
-    color: #f1f1f1;
-}
-
-.sidenav .closebtn {
-    position: absolute;
-    top: 0;
-    right: 25px;
-    font-size: 36px;
-    margin-left: 50px;
-}
-
-.openbtn{
-  float:left; 
-  font-size:24px; 
-  cursor:pointer;
-}
-
-@media screen and (max-height: 450px) {
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
 }
 
 /*Snackbar*/
@@ -181,10 +85,65 @@ video {
     to {bottom: 0; opacity: 0;}
 }
 
+
+p.error {
+  margin-top: 30vh;
+  text-align: center;
+}
+
+detail-view {
+  position: fixed;
+  top: 50px;
+  left: 0;
+  right: 0;
+  height: 100vh;
+  overflow: auto;
+  background: #FFF;
+  transform: translate3d(0, 100%, 0);
+  opacity: 0;
+  transition-property: transform, opacity;
+  transition-duration: 0.4s;
+}
+
+.hero{
+  text-align: center;
+  max-width: 750px;
+  margin: 0 auto;
+}
+
+.body{
+  max-width: 750px;
+  margin: 0 auto;
+  margin-top: -50px;
+}
+
+body.detail-view-active {
+  overflow: hidden;
+}
+
+body.detail-view-active detail-view {
+  transform: translate3d(0, 0, 0);
+  opacity: 1;
+}
+
+video {
+  max-width: 100%;
+  height: auto;
+}
+
 /*hide links and retain users in our application*/
 detail-view a {
   pointer-events: none;
   color: black;
+}
+
+detail-view img {
+  max-width: 100%;
+  height: auto;
+}
+
+.back-icon{
+  color: white;
 }
 
 
